--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.w3.org/1999/xhtml">
 <head lang="en">
     <meta charset="UTF-8" />
-    <title></title>
+    <title>WelCome!Spring-Boot</title>
 </head>
 <body>
 <h1 th:text="${host}">Hello World</h1>
